[package]
name = "tui_view"
version = "0.1.0"
edition = "2021"
description = "Reusable and mildly configurable TUI view"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
itertools = "0.10.5"
better-panic = "0.3.0"
