[package]
name = "tui_view"
version = "0.2.2"
edition = "2021"
description = "Reusable and mildly configurable TUI view"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nonzac/tui_view"

[dependencies]
tui = "0.19"
crossterm = "0.25"
itertools = "0.10.5"
better-panic = "0.3.0"
